frontpage tweaks, nettoyage - toujours trop de custom vieux css

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@ layout: default
         color: white;
         text-align: center;
         background: url(images/clavier.jpg) no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
         background-size: cover;
     }
 
@@ -126,7 +123,7 @@ layout: default
             font-size: 2.5rem;
         }
 
-        .bd-featurette-title + .lead {
+        .bd-featurette-title+.lead {
             font-size: 1.5rem;
         }
 
@@ -134,120 +131,125 @@ layout: default
             max-width: 80%;
         }
     }
-
 </style>
-<body class="bd-home">
 
 <main class="bd-masthead">
     <div class="container">
         <h1>Okiwi</h1>
         <p class="lead">Catalyseur d'évènements informatiques sur Bordeaux</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/" target="_meetup_all">
+            <a class="btn btn-primary btn-lg" href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/"
+                target="_meetup_all">
                 Voir les évènements
             </a>
         </p>
     </div>
 </main>
 
-<div class="bd-featurette">
-    <div class="container">
-        <h2 class="bd-featurette-title">Qu'est ce qu'Okiwi&nbsp;?</h2>
-        <p class="lead">
-            Okiwi est une communauté ouverte de praticiennes et praticiens en informatique, originaire de Bordeaux. 
-            Okiwi est bâtie autour de la bienveillance, de l’inclusion et du partage. Okiwi est une communauté qui cultive l’ouverture et la diversité.
-            Ouverte parce que nous ne donnons pas de limites à notre curiosité. L’activité de l’association dépendra de ce que chacun y apportera.
-            <br>
-            Nous organisons entre autres :
-        </p>
 
-        <div class="row">
-            <div class="col-lg-4 col-md-6 m-b-3">
-                <h4>Coding Dojos</h4>
-                <p>
-                    Les <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/" target="_meetup_software-craft">coding dojos</a> sont des sessions amusantes et intenses 
-                    pendant lesquelles des développeuses et développeurs de tous niveaux
-                    améliorent leurs compétences en programmation. Okiwi organise un coding dojo chaque premier lundi du mois.
-                </p>
-            </div>
-            <div class="col-lg-4 col-md-6 m-b-3">
-                <h4>Agile Tour Bordeaux</h4>
-                <p>
-                    <a href="http://agiletourbordeaux.fr/" target="_blank">L'Agile Tour Bordeaux</a> est un événement
-                    à but non lucratif, qui vise principalement à promouvoir massivement l'Agilité. Okiwi organise
-                    depuis 2009 l'Agile Tour Bordeaux.
-                </p>
-            </div>
-            <div class="col-lg-4 col-md-6 m-b-3">
-                <h4>Geek Camp</h4>
-                <p>
-                    Le <a href="/geek-camp/">Geek Camp</a> est une rencontre entre aficionados de l'informatique qui se déroule sur deux week-ends, un en juin et un en septembre.
-                    Il est organisé en format Forum Ouvert. Discussions, séances de code, cuisine en groupe et barbecues étaient au programme des éditions précédentes&nbsp;!
-                </p>
-            </div>
+<div class="container bd-featurette">
+    <h2 class="bd-featurette-title">Qu'est ce qu'Okiwi&nbsp;?</h2>
+    <p class="lead">
+        Okiwi est une communauté ouverte de praticiennes et praticiens en informatique, originaire de Bordeaux.
+        Okiwi est bâtie autour de la bienveillance, de l’inclusion et du partage. Okiwi est une communauté qui cultive
+        l’ouverture et la diversité.
+        Ouverte parce que nous ne donnons pas de limites à notre curiosité. L’activité de l’association dépendra de ce
+        que chacun y apportera.
+        <br>
+        Nous organisons entre autres :
+    </p>
+
+    <div class="row">
+        <div class="col-lg-4 col-md-6 m-b-3">
+            <h4>Coding Dojos</h4>
+            <p>
+                Les <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/"
+                    target="_meetup_software-craft">coding dojos</a> sont des sessions amusantes et intenses
+                pendant lesquelles des développeuses et développeurs de tous niveaux
+                améliorent leurs compétences en programmation. Okiwi organise un coding dojo chaque premier lundi du
+                mois.
+            </p>
         </div>
-        <div class="row">
-            <div class="col-lg-4 col-md-6 m-b-3">
-                <h4>Le Slack Okiwi</h4>
-                <p>
-                    Sur ce <a href="/slack">forum de discussion</a>, nous discutons librement de toutes sortes de sujets qui touchent l'informatique. 
-                    C'est notre lieu de rencontre et d'échange virtuel où l'on peut discuter technique, organisationnel et même philosophie.
-                </p>
-            </div>
-            <div class="col-lg-4 col-md-6 m-b-3">
-                <h4>Le Discord Okiwi</h4>
-                <p>
-                    Nous utilisons <a href="https://discord.com/invite/BQa48a2" target="_blank">Discord</a> afin d'organiser des sessions d'échange et des codings dojo
-                    en visioconférence.
-                </p>
-            </div>
+        <div class="col-lg-4 col-md-6 m-b-3">
+            <h4>Agile Tour Bordeaux</h4>
+            <p>
+                <a href="http://agiletourbordeaux.fr/" target="_blank">L'Agile Tour Bordeaux</a> est un événement
+                à but non lucratif, qui vise principalement à promouvoir massivement l'Agilité. Okiwi organise
+                depuis 2009 l'Agile Tour Bordeaux.
+            </p>
+        </div>
+        <div class="col-lg-4 col-md-6 m-b-3">
+            <h4>Geek Camp</h4>
+            <p>
+                Le <a href="/geek-camp/">Geek Camp</a> est une rencontre entre aficionados de l'informatique qui se
+                déroule sur deux week-ends, un en juin et un en septembre.
+                Il est organisé en format Forum Ouvert. Discussions, séances de code, cuisine en groupe et barbecues
+                étaient au programme des éditions précédentes&nbsp;!
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-4 col-md-6 m-b-3">
+            <h4>Le Slack Okiwi</h4>
+            <p>
+                Sur ce <a href="/slack">forum de discussion</a>, nous discutons librement de toutes sortes de sujets qui
+                touchent l'informatique.
+                C'est notre lieu de rencontre et d'échange virtuel où l'on peut discuter technique, organisationnel et
+                même philosophie.
+            </p>
+        </div>
+        <div class="col-lg-4 col-md-6 m-b-3">
+            <h4>Le Discord Okiwi</h4>
+            <p>
+                Nous utilisons <a href="https://discord.com/invite/BQa48a2" target="_blank">Discord</a> afin d'organiser
+                des sessions d'échange et des codings dojo
+                en visioconférence.
+            </p>
         </div>
     </div>
 </div>
 
-<div class="bd-featurette">
-    <div class="container">
-        <h2 class="bd-featurette-title">Soutenir Okiwi</h2>
-        <p class="lead">
-            Okiwi est une <a href="/status">association loi 1901 qui existe depuis 2006</a>. 
-            La communauté décide de contribuer bénévolement au développement de
-            l'association. De ce fait, l'ensemble des activités de l'association sont gratuites. Néanmoins il est
-            possible de soutenir l'association et d'adhérer pour devenir membre cotisant.
-        </p>
 
-        <p class="lead">
-            <a href="{{ "/adherer/" | prepend: site.url }}" class="btn btn-outline-primary">
-                Cotisez pour soutenir l'association
-            </a>
-        </p>
-    </div>
+<div class="container bd-featurette">
+    <h2 class="bd-featurette-title">Soutenir Okiwi</h2>
+    <p class="lead">
+        Okiwi est une <a href="/status">association loi 1901 qui existe depuis 2006</a>.
+        La communauté décide de contribuer bénévolement au développement de
+        l'association. De ce fait, l'ensemble des activités de l'association sont gratuites. Néanmoins il est
+        possible de soutenir l'association et d'adhérer pour devenir membre cotisant.
+    </p>
+
+    <p class="lead">
+        <a href="{{ " /adherer/" | prepend: site.url }}" class="btn btn-outline-primary">
+            Cotisez pour soutenir l'association
+        </a>
+    </p>
 </div>
 
-<div class="bd-featurette">
-    <div class="container">
-        <h2 class="bd-featurette-title">Coding Dojo&nbsp;?</h2>
-        <div class="lead">
-            Des <b>coding dojos</b>, sessions amusantes et intenses pendant lesquelles des développeuses et développeurs améliorent
-            leurs compétences en programmation et en communication. Le principe est simple&nbsp;: on prend un exercice de programmation,
-            on choisit un langage, et on essaie de coder une solution en respectant les 4 règles du design
-            simple de Kent Beck&nbsp;:
 
-            <ul class="list-unstyled left-list">
-                <li>passer tous les tests&nbsp;;</li>
-                <li>aucune duplication de code&nbsp;;</li>
-                <li>révéler les intentions par le code, être très attentif au nommage&nbsp;;</li>
-                <li>réduire le nombre de classes et de méthodes.</li>
-            </ul>
-        </div>
-         <p class="lead">
-            <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/" target="_meetup_software-craft" class="btn btn-outline-primary">
-                Voir les prochains codings dojos
-            </a>
-        </p>
+<div class="container bd-featurette">
+    <h2 class="bd-featurette-title">Coding Dojo&nbsp;?</h2>
+    <div class="lead">
+        Des <b>coding dojos</b>, sessions amusantes et intenses pendant lesquelles des développeuses et développeurs
+        améliorent
+        leurs compétences en programmation et en communication. Le principe est simple&nbsp;: on prend un exercice de
+        programmation,
+        on choisit un langage, et on essaie de coder une solution en respectant les 4 règles du design
+        simple de Kent Beck&nbsp;:
+
+        <ul class="list-unstyled left-list">
+            <li>passer tous les tests&nbsp;;</li>
+            <li>aucune duplication de code&nbsp;;</li>
+            <li>révéler les intentions par le code, être très attentif au nommage&nbsp;;</li>
+            <li>réduire le nombre de classes et de méthodes.</li>
+        </ul>
     </div>
-</div>
-
-<div class="container">
+    <p class="lead">
+        <a href="https://www.meetup.com/fr-FR/software-craftsmanship-bdx/" target="_meetup_software-craft"
+            class="btn btn-outline-primary">
+            Voir les prochains codings dojos
+        </a>
+    </p>
     <div class="row">
         <div class="col-sm-6 col-md-3">
             <img class="img-thumbnail" src="images/coding_dojo4.jpg">
@@ -263,5 +265,3 @@ layout: default
         </div>
     </div>
 </div>
-
-</body>
