AG 2023 : proposition pour compléter les motifs de radiation

--- a/status/index.html
+++ b/status/index.html
@@ -80,19 +80,18 @@ layout: default
             <h2>Article IV – Condition de perte de la qualité de membre</h2>
 
             <p>
-                La qualité de membre se perd par:
+                La qualité de membre se perd par :
             </p>
             <ul>
                 <li>
-                    la démission: transcrite par écrit, datée et signée.Elle pourra être remise en main propres à un
+                    la démission : transcrite par écrit, datée et signée.Elle pourra être remise en main propres à un
                     membre du bureau ou envoyée au siège de l’association.
                 </li>
                 <li>
-                    la radiation: pour motif grave, suite à une décision de la présidence, du bureau ou du conseil
-                    d’administration. Celle-ci prend effet en date de notification mais peut être dénoncée, le cas
+                    la radiation : pour motif grave, suite à une décision de la présidence, du bureau ou du conseil
+                    d’administration, ou en cas d'enfreint au Code de Conduite de l'association. Celle-ci prend effet en date de notification mais peut être dénoncée, le cas
                     échéant
-                    lors de l’assemblée générale ou extraordinaire suivante. Dans tous les cas l’interessé sera convié à
-                    défendre son point de vue et ces décisions.
+                    lors de l’assemblée générale ou extraordinaire suivante.
                 </li>
             </ul>
             <p></p>
