MaJ de procedure d'inscription

--- a/slack/index.html
+++ b/slack/index.html
@@ -32,9 +32,9 @@ layout: nofooter
                 <a href="https://okiwi-fr.slack.com" class="btn btn-primary" role="button" data-bs-toggle="button">
                     Connexion <span class="hidden-sm-down">sur okiwi-fr.slack.com</span>
                 </a>
-                <a href="https://join.slack.com/t/okiwi-fr/shared_invite/zt-1l6hwigz7-QCIfJzym8SubcJgCsyFa_A" class="btn btn-outline-primary" role="button" data-bs-toggle="button">
-                    Inscription
-                </a>
+                <h5>
+                Pour s'inscrire sur le Slack, soit demandez à un.e ami.e deja inscrit.e de vous inviter, soit envoyez un email à contact [at] okiwi.org. 
+                </h5>
             </p>
             <p>Ce <a href="/CoC.html">Code de conduite</a> est en vigueur dans le Slack, bien évidemment.</p>
         </div>
