Mis à jour description inscription et CoC

--- a/slack/index.html
+++ b/slack/index.html
@@ -32,11 +32,14 @@ layout: nofooter
                 <a href="https://okiwi-fr.slack.com" class="btn btn-primary" role="button" data-bs-toggle="button">
                     Connexion <span class="hidden-sm-down">sur okiwi-fr.slack.com</span>
                 </a>
-                <h5>
-                Pour s'inscrire sur le Slack, soit demandez à un.e ami.e deja inscrit.e de vous inviter, soit envoyez un email à contact [at] okiwi.org. 
-                </h5>
+	    <h2>Inscription</h2>
+	    <p>Pour vous inscrire sur le Slack d'Okiwi, deux possibilités :</p>
+	    <ul>
+		    <li>demander à une personne déjà inscrite de vous inviter,</li>
+		    <li>envoyer une demande par email à contact [at] okiwi.org.</li>
+                </ul>
             </p>
-            <p>Ce <a href="/CoC.html">Code de conduite</a> est en vigueur dans le Slack, bien évidemment.</p>
+            <b>Le <a href="/CoC.html">code de conduite</a> est en vigueur sur ce Slack, comme dans tous les moyens de communication et évènements Okiwi.</b>
         </div>
     </div>
 </div>
