Mise à jour du bureau
Signed-off-by: Pamplemousse <git@xaviermaso.com>

--- a/status/index.html
+++ b/status/index.html
@@ -7,13 +7,12 @@ layout: default
         <div class="col-xs-12 p-y-3">
             <h1>Les membres du bureau</h1>
             <ul>
-                <li><strong>Président</strong> : Sam Cranford</li>
-                <li><strong>Secrétaire</strong> : Fabien Lamarque</li>
-                <li><strong>Vice-Secrétaire</strong> : Alain Delachaux</li>
-                <li><strong>Trésorière</strong> : Stéfanie Loiseleur</li>
-                <li><strong>Vice-Trésorier</strong> : Colin Garriga-Salaün</li>
+                <li><strong>Président</strong> : Sam Cranford</li>
+                <li><strong>Vice-Président</strong> : Alain Delachaux</li>
+                <li><strong>Secrétaire</strong> : Xavier Maso</li>
+                <li><strong>Trésorière</strong> : Stéfanie Loiseleur</li>
             </ul>
-            
+
             <h1>Les statuts de l'association</h1>
 
             <h2>Article I – Dénomination, durée et sièges</h2>
