Correction de plusieurs erreurs typographiques dans les statuts
Signed-off-by: Pamplemousse <git@xaviermaso.com>

--- a/statuts/index.html
+++ b/statuts/index.html
@@ -19,8 +19,8 @@ layout: default
 
             <p>
                 Il est fondé ce dimanche 15 janvier 2006 à Bordeaux (Gironde), entre les adhérents aux présents statuts,
-                une association régie par la loi du 1er juillet 1901 et le décret du 16 août 1901, ayant pour titre :
-                Okiwi
+                une association régie par la loi du 1er juillet 1901 et le décret du 16 août 1901, ayant pour titre :
+                Okiwi.
             </p>
             <p>
                 La durée de l’association est illimitée.
@@ -44,24 +44,24 @@ layout: default
             <h2>Article III – Les membres</h2>
 
             <p>
-                L’association Okiwi se compose de:
+                L’association Okiwi se compose de :
                 <br>
             </p>
             <ul>
                 <li>
-                    membre fondateur: personne ayant participé à la création de l’association
+                    membre fondateur : personne ayant participé à la création de l’association.
                 </li>
                 <li>
-                    membre actif: personne participant activement à la vie de l’association
+                    membre actif : personne participant activement à la vie de l’association.
                 </li>
                 <li>
-                    membre adhérent: personne physique ou morale ayant adhéré à ce titre pour l’année en cours, et à
-                    jour du paiement de son adhésion en date de l’assemblée générale
+                    membre adhérent : personne physique ou morale ayant adhéré à ce titre pour l’année en cours, et à
+                    jour du paiement de son adhésion en date de l’assemblée générale.
                 </li>
             </ul>
 
             <p>
-                Qualité et spécificité des membres: pour être membre il faut être majeur (ou fournir une autorisation
+                Qualité et spécificité des membres : pour être membre il faut être majeur (ou fournir une autorisation
                 écrite des parents), jouir de ses droits civiques, être présenté par au moins un membre de l’association
                 et agréé par le conseil d’administration.
             </p>
@@ -69,25 +69,24 @@ layout: default
                 Les adhésions et cotisations d’activités des membres actifs, adhérents et bienfaiteurs sont déterminés
                 annuellement en assemblée générale. Le cas échéant et en cas de besoin le bureau de l’association pourra
                 les modifier en cours d’année sans que ces modifications puissent être rétroactives; le bureau devra
-                dans ce cas justifier sa décision auprès de
-                l’assemblée générale suivante.
+                dans ce cas justifier sa décision auprès de l’assemblée générale suivante.
             </p>
             <p>
-                Les membres fondateurs sont exonérés d’adhésion à vie sauf en cas de radiations pour motif grave.
+                Les membres fondateurs sont exonérés d’adhésion à vie sauf en cas de radiation pour motif grave.
             </p>
 
             <h2>Article IV – Condition de perte de la qualité de membre</h2>
 
             <p>
-                La qualité de membre se perd par:
+                La qualité de membre se perd par :
             </p>
             <ul>
                 <li>
-                    la démission: transcrite par écrit, datée et signée.Elle pourra être remise en main propres à un
+                    la démission : transcrite par écrit, datée et signée. Elle pourra être remise en main propres à un
                     membre du bureau ou envoyée au siège de l’association.
                 </li>
                 <li>
-                    la radiation: pour motif grave, suite à une décision de la présidence, du bureau ou du conseil
+                    la radiation : pour motif grave, suite à une décision de la présidence, du bureau ou du conseil
                     d’administration. Celle-ci prend effet en date de notification mais peut être dénoncée, le cas
                     échéant
                     lors de l’assemblée générale ou extraordinaire suivante. Dans tous les cas l’interessé sera convié à
@@ -99,7 +98,7 @@ layout: default
             <h2>Article V – Ressources</h2>
 
             <p>
-                Les ressources de l’association comprennent:
+                Les ressources de l’association comprennent :
             </p>
             <ul>
                 <li>
@@ -155,19 +154,18 @@ layout: default
             <h2>Article VII – Réunion du conseil d’administration</h2>
 
             <p>
-                Le conseil se réunit au moins une fois par an, et chaque fois qu’il est convoqué par son président,ou
+                Le conseil se réunit au moins une fois par an, et chaque fois qu’il est convoqué par son président, ou
                 sur la demande du tiers de ses membres.
             </p>
             <p>
                 La présence de sept des membres du conseil d’administration est nécessaire pour la validité des
-                délibérations. Les décisions sont prises par la majorité des voix; en cas de partage la voix du
+                délibérations. Les décisions sont prises par la majorité des voix ; en cas de partage la voix du
                 président est prépondérante.
             </p>
             <p>
                 Il est tenu un procès-verbal des séances.
-                Les procès-verbaux sont rédigés par le président ou secrétaire et enregistrés dans un registre papiers
-                ou
-                informatiques.
+                Les procès-verbaux sont rédigés par le président ou secrétaire et enregistrés dans un registre papier
+                ou informatique.
             </p>
             <p>
                 Tout membre du conseil qui sans excuse n’aura pas assisté à trois réunions successives pourra être
@@ -181,14 +179,14 @@ layout: default
 
             <p>
                 Les membres de l’association ne peuvent recevoir aucune rétribution à raison des fonctions qui leurs
-                sont confiées
+                sont confiées.
             </p>
 
             <h2>Article IX – Assemblée générale</h2>
 
             <p>
                 L’assemblée générale de l’association comprend les membres actifs, fondateurs, et adhérents. La
-                présence de la moitié ds membres actifs est nécessaire pour la validité des délibérations. Elle se
+                présence de la moitié des membres actifs est nécessaire pour la validité des délibérations. Elle se
                 réunit une fois par an et chaque fois qu’elle est convoquée par le conseil d’administration ou sur la
                 demande du quart au moins de ses membres.
             </p>
