Ce sont des statuTs
Signed-off-by: Pamplemousse <git@xaviermaso.com>

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ layout: default
 <div class="container bd-featurette">
     <h2 class="bd-featurette-title">Soutenir Okiwi</h2>
     <p class="lead">
-        Okiwi est une <a href="/status">association loi 1901 qui existe depuis 2006</a>.
+        Okiwi est une <a href="/statuts">association loi 1901 qui existe depuis 2006</a>.
         La communauté décide de contribuer bénévolement au développement de
         l'association. De ce fait, l'ensemble des activités de l'association sont gratuites. Néanmoins il est
         possible de soutenir l'association et d'adhérer pour devenir membre cotisant.
