--- a/adherer/index.html
+++ b/adherer/index.html
@@ -33,7 +33,7 @@ layout: nofooter
             </p>
             <ul>
                 <li>l'assurance responsabilité civile qui nous permet d'organiser autant d'évènements que nous
-                    souhaitons (Geek Camp, coding dojos, Newcrafts Bordeaux...)
+                    souhaitons (Agile Tour Bordeaux, Geek Camp, coding dojos, Newcrafts Bordeaux...)
                 </li>
                 <li>les frais de tenue de compte bancaire</li>
                 <li>les noms de domaine <a href="http://okiwi.org/">okiwi.org</a> et <a
