Update geek camp
J’ai mis à jour les dates et rajouté un lien vers les événements dans meetup

--- a/geek-camp/index.html
+++ b/geek-camp/index.html
@@ -1,18 +1,26 @@
 ---
 layout: default
-title: Geek Camp 2022 - Évènements Okiwi
+title: Geek Camp 2024 - Évènements Okiwi
 ---
 <div class="container">
     <div class="card" style="border: none"> 
         <div class="card-body">
-            <h2 class="card-title">Les dates pour 2023 sont établis</h2>
+            <h2 class="card-title">Les dates pour 2024 sont établies</h2>
                 <p class="pt-2">
-                    <h1>Geek Camp du printemps 2023</h1>
-                    <h2>16, 17 et 18 juin à Ruffiac (47700)</h2>
+                    <h1>Geek Camp de printemps 2024</h1>
+                    <h2>31 mai, 1<sup>er</sup> et 2 juin à Ruffiac (47700)</h2>
+                </p>
+                <p class="row pt-2">
+                    <a href="https://www.meetup.com/software-craftsmanship-bdx/events/298299676/" target="_blank">Les
+                        inscriptions sont ouvertes</a>
                 </p>
                 <p class="pt-2">
-                    <h1>Geek Camp de l'automne 2023</h1>
-                    <h2>22, 23, 24 séptembre à Ruffiac (47700)</h2>
+                    <h1>Geek Camp d'automne 2024</h1>
+                    <h2>27, 28, et 29 séptembre à Ruffiac (47700)</h2>
+                </p>
+                <p class="row pt-2">
+                    <a href="https://www.meetup.com/software-craftsmanship-bdx/events/298299761/" target="_blank">Les
+                        inscriptions sont ouvertes</a>
                 </p>
             <h3>Un weekend entre aficionados de l'informatique, à la campagne</h3>
             <p>Au programme&nbsp;:</p>
@@ -24,10 +32,6 @@ title: Geek Camp 2022 - Évènements Okiwi
                 <li>grillades et sorties campagnardes</li>
                 <li>dormir à la belle étoile</li>
             </ul>
-            <p class="row pt-2">
-                <a href="https://www.meetup.com/software-craftsmanship-bdx/events/" target="_blank">Les
-                    inscriptions seront bientôt ouvertes</a>
-            </p>
             <div>
                 <a href="/img/Affiche-GeekCamp.png">
                     <img src="/img/Affiche-GeekCamp.png" alt="Flyer Geek Camp à imprimer" />
