--- a/discord/index.html
+++ b/discord/index.html
@@ -7,9 +7,9 @@ layout: nofooter
         <div class="col-xs-12 p-y-3">
             <h1>Discord</h1>
             <p>
-				Vous voici aux portes du Discord d'Okiwi, <b>pour continuer online les partages et échanges bienveillants qui font l'ADN de l'association.</b>
+				Vous voici aux portes du Discord d'Okiwi, <b>pour continuer en ligne les partages et échanges bienveillants qui font l'ADN de l'association.</b>
             </p><p>
-            	Cet instance est en complemente du <a href="../slack/">Slack</a> d'Okiwi. On se serve notament des Voice Channels pour discuter en visio.
+            	Ce Discord est en complément du <a href="../slack/">Slack</a> d'Okiwi. On se sert notamment des Voice Channels pour discuter en visio.
             </p>
             <p class="d-grid gap-2">
                 <h2>Inscription</h2>
@@ -19,7 +19,7 @@ layout: nofooter
                     <li>envoyer une demande par email à contact [at] okiwi.org.</li>
                 </ul>
             </p>
-            <b>Le <a href="/CoC.html">code de conduite</a> est en vigueur sur ce Discord, comme dans tous les moyens de communication et évènements Okiwi.</b>
+            <b>Le <a href="/CoC.html">code de conduite</a> est en vigueur sur ce Discord, comme sur tous les moyens de communication et événements Okiwi.</b>
         </div>
     </div>
 </div>
