--- a/statuts/index.html
+++ b/statuts/index.html
@@ -37,6 +37,9 @@ layout: default
                 espérant qu’en émergent des projets libres et utiles à tous.
             </p>
             <p>
+                Les valeurs d'Okiwi sont la bienveillance, l'inclusion, l'ouverture, la diversité et le partage.  
+            </p>
+            <p>
                 L’association se réserve le droit d’utiliser tous les moyens utiles et nécessaires au développement de
                 son activité, dans les limites de celles prévues par la législation en vigueur et par la loi de 1901.
             </p>
