Revert "MaJ Article V - les membres"
This reverts commit 9f6051d90dc860f57bcf126f306c11f9e87b99e6.

--- a/statuts/index.html
+++ b/statuts/index.html
@@ -47,23 +47,19 @@ layout: default
             <h2>Article III – Les membres</h2>
 
             <p>
-                L’association Okiwi se compose de :
+                L’association Okiwi se compose de:
                 <br>
             </p>
             <ul>
                 <li>
-                    <p>Membre Adhérent</p>
-                    <ul>
-                        <li>Droits : Droit de vote à l'assemblée générale, éligibilité au conseil d'administration</li>
-                        <li>Obligations : Paiement de la cotisation annuelle, respect du règlement intérieur et du code de conduite de l'association </li>
-                    </ul>
+                    membre fondateur: personne ayant participé à la création de l’association
                 </li>
                 <li>
-                    <p>Visiteur</p>
-                    <ul>
-                        <li>Droits : Participation au événement publique d’Okiwi, accès au slack / discord, néanmoins, le conseil d’administration se réserve un droit de regard sur l’accès afin de faire respecter le règlement intérieur et du code de conduite de l’association.</li>
-                        <li>Obligations : respect du règlement intérieur et du code de conduite de l'association </li>
-                    </ul>
+                    membre actif: personne participant activement à la vie de l’association
+                </li>
+                <li>
+                    membre adhérent: personne physique ou morale ayant adhéré à ce titre pour l’année en cours, et à
+                    jour du paiement de son adhésion en date de l’assemblée générale
                 </li>
             </ul>
 
