--- a/statuts/index.html
+++ b/statuts/index.html
@@ -48,21 +48,21 @@ layout: default
 
             <p>
                 L’association Okiwi se compose de:
-                <br>
+                <ul>
+                    <p>Membre Adhérent</p>
+                    <ul>
+                        <li>Droits : Droit de vote à l'assemblée générale, éligibilité au conseil d'administration</li>
+                        <li>Obligations : Paiement de la cotisation annuelle, respect du règlement intérieur et du code de conduite de l'association </li>
+                    </ul>
+                </li>
+                <li>
+                    <p>Visiteur</p>
+                    <ul>
+                        <li>Droits : Participation au événement publique d’Okiwi, accès au slack / discord, néanmoins, le conseil d’administration se réserve un droit de regard sur l’accès afin de faire respecter le règlement intérieur et du code de conduite de l’association.</li>
+                        <li>Obligations : respect du règlement intérieur et du code de conduite de l'association </li>
+                    </ul>
+                </ul>
             </p>
-            <ul>
-                <li>
-                    membre fondateur: personne ayant participé à la création de l’association
-                </li>
-                <li>
-                    membre actif: personne participant activement à la vie de l’association
-                </li>
-                <li>
-                    membre adhérent: personne physique ou morale ayant adhéré à ce titre pour l’année en cours, et à
-                    jour du paiement de son adhésion en date de l’assemblée générale
-                </li>
-            </ul>
-
             <p>
                 Qualité et spécificité des membres: pour être membre il faut être majeur (ou fournir une autorisation
                 écrite des parents), jouir de ses droits civiques, être présenté par au moins un membre de l’association
