--- a/statuts/index.html
+++ b/statuts/index.html
@@ -62,6 +62,13 @@ layout: default
                         <li>Obligations : respect du règlement intérieur et du code de conduite de l'association </li>
                     </ul>
                 </ul>
+                <li>
+                    <p>Membre d'honneur</p>
+                    <ul>
+                        <li>Droits : Participation à l'assemblée générale avec droit de vote, éligibilité au conseil d'administration. </li>
+                        <li>Obligations : Contribuer activement à la direction et au développement de l'association, maintenir l'esprit et les valeurs fondatrices, respect du règlement intérieur et du code de conduite de l'association </li>
+                    </ul>
+                </li>
             </p>
             <p>
                 Qualité et spécificité des membres: pour être membre il faut être majeur (ou fournir une autorisation
